# Project_Van_Hool

./: Blog.html  README.md  compress_media.ipynb  compress_media.py  convert_image_to_jpg.ipynb  index.html  pyproject.toml  styles.css  table_of_contents.html
BACK-UP/: 20260119index.html  20260120_compress_media.ipynb  20260120_compress_media_v2.ipynb  20260120table_of_contents.html  20260121index.html
Media/: desktop.ini
