[project]
name = "project-van-hool"
version = "0.1.0"
description = "Van Hool blog hosted on Github"
authors = [
    {name = "Remon Felix",email = "remonfelix97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
